--- a/packages/app-web/src/style.scss
+++ b/packages/app-web/src/style.scss
@@ -1,4 +1,12 @@
-@use 'vuetify' with ($utilities: false);
+@use 'vuetify' with ($utilities: false,
+  $color-pack: false,
+);
+
+@use "@ag-grid-community/styles" as ag;
+@include ag.grid-styles((themes: (alpine,
+      alpine-dark,
+    ),
+  ));
 
 @tailwind base;
 @tailwind components;
